--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,21 +1,44 @@
 /* mi css */
 
+
+/* fonts */
+
+.roboto-light {
+    font-family: "Roboto", serif;
+    font-weight: 300;
+    font-style: normal;
+  }
+  
+  .roboto-regular {
+    font-family: "Roboto", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .roboto-bold {
+    font-family: "Roboto", serif;
+    font-weight: 700;
+    font-style: normal;
+  }
+
 /* grid areas */
 
 header{
     grid-area: h;
-    background-color: blueviolet;
+    padding: 0 1rem 0 1rem ;
 }
 section{
     grid-area: s;
-    background-color: grey;
+    background-color: #dcbdff;
 }
 main{
     grid-area: m;
 }
 footer{
     grid-area: f;
-    background-color: blueviolet;
+    background-image: url("../img/footer.jpg");
+    background-size: cover;
+    background-position: bottom;
 }
 
 /* grid layout */
@@ -29,5 +52,27 @@ footer{
         "f";
 
     grid-template-columns: 1fr;
-    grid-template-rows: 50px 50px 50px 50px;
+    grid-template-rows: auto 50px 50px 200px;
+}
+
+
+/* header */
+
+nav{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* logo */
+.logo{
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    color: #ffc17d;
+}
+
+.logo img {
+    width: 3rem;    
+    
 }
