--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -92,8 +92,29 @@ select {
   border: 1px solid #ccc;
   padding: 10px;
   width: 80%;
-  background-color: white; 
-  color: #333; 
+  background-color: white;
+  color: #333;
   border-radius: 5px;
   cursor: pointer;
+}
+
+/* main */
+
+/* footer */
+
+footer {
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: start;
+  align-items: center;
+  padding-top: 0.8rem;
+}
+
+footer img {
+  width: 2rem;
+}
+
+footer p {
+  margin: 0;
 }
