--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -110,8 +110,13 @@ main {
   flex-direction: column;
   align-items: center;
   text-align: center;
-  padding-top: 1rem;
+  gap: 1rem;
   padding-bottom: 1rem;
+}
+
+.cards {
+  display: flex;
+  flex-direction: column;
   gap: 1rem;
 }
 
@@ -173,4 +178,38 @@ footer img {
 
 footer p {
   margin: 0;
+}
+
+/* version desktop */
+
+@media (min-width: 577px) {
+  /* grid layout */
+
+  .grid-container {
+    display: grid;
+    /* h s m f */
+    grid-template-areas:
+      "h s"
+      "h m"
+      "f m";
+
+    grid-template-columns: 1fr 5fr;
+    grid-template-rows: 1fr 8fr 2fr;
+    min-height: 100vh;
+    max-height: 100vh;
+  }
+
+  .cards {
+    display: flex;
+    flex-direction: row;
+    width: 90%;
+    justify-content: start;
+    flex-wrap: wrap;
+    gap: 1rem;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+
+    max-height: 100vh;
+    overflow-y: auto;
+  }
 }
